Added more pages

--- a/station.html
+++ b/station.html
@@ -120,5 +120,5 @@ Log from AT Santa Contest 2002<br>
 
 <p>
 During my summer holiday in 2010 I was active from Kristiinankaupunki (Kristinestad), which is also a city in the
-west coast of Finland. You can find some pictures of my visit to Kristiinankaupunki <a href="kristinestad_2010.php">here</a>.
+west coast of Finland. You can find some pictures of my visit to Kristiinankaupunki <a href="kristiina-2010">here</a>.
 </p>
