Added some missing files

--- a/qsls.html
+++ b/qsls.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 
-
 <h2>Year 2014</h2>
 
 <p>
@@ -118,5 +117,5 @@ layout: default
 <br>
 
 <p>
-One way of creating an eQSL: <a href="radioqth_qsl_creator.php" title="RadioQTH QSL Creator">RadioQTH QSL Creator</a>
+One way of creating an eQSL: <a href="radioqth-qsl-creator" title="RadioQTH QSL Creator">RadioQTH QSL Creator</a>
 </p>
