Updated some links

--- a/links.html
+++ b/links.html
@@ -23,11 +23,6 @@ DX Group Foxtrot Lima" /></a>
 <!-- <a href="http://www.emudx.com" target="_blank">http://www.emudx.com</a> -->
 </ul>
 
-<p>
-<a href="http://yalog.altervista.org"><img src="images/yalogbanner468x60.gif" alt="yaLOG!"></a>
-</p>
-
-
 <!--
 <br>
 
@@ -65,8 +60,8 @@ Understanding 10 meter (also 11 meter) Sporadic E<br>
 <br>
 <br>
 -->
--Ultimate guide to 11 meter antennas<br>
-<a href="http://www.signalengineering.com/ultimate" target="_blank">http://www.signalengineering.com/ultimate</a>
+-11 meter antennas on WWW<br>
+<a href="http://fldx.org/site/11m-antennas-on-internet.php" target="_blank">http://fldx.org/site/11m-antennas-on-internet.php</a>
 <!--
 <br>
 <br>
@@ -105,4 +100,8 @@ Antenna manufacturers<br>
 <p>
 Electronics Assistant is a Windows program that performs electronics-related calculations.<br>
 <a href="http://www.electronics2000.co.uk/download.php" target="_blank">http://www.electronics2000.co.uk/download.php</a>
+</p>
+
+<p>
+<a href="http://yalog.altervista.org"><img src="images/yalogbanner468x60.gif" alt="yaLOG!"></a>
 </p>
