--- a/links.html
+++ b/links.html
@@ -5,11 +5,13 @@ links: Links to Some Other Radio Related Sites
 
 <h1>Links to Some Other Radio Related Sites</h1>
 
+{% comment %}
 <!--
 <p class="c">
 <a href="http://www.qsl11.com" target="_blank"><img src="images/qsl_b2.gif" width="468" height="60" alt="QSL11.com - 11m E-QSL exchange" border="0" /></a><br>
 </p>
 -->
+{% endcomment %}
 
 <p>
 <a href="http://fldx.org" target="_blank"><img src="http://fldx.org/site/images/fl_banner.jpg" style="border: 0px;" alt="Finnish International
@@ -20,9 +22,10 @@ DX Group Foxtrot Lima" /></a>
 <li><a href="http://www.alfatango.org" target="_blank">http://www.alfatango.org</a></li>
 <li><a href="http://www.cluster.dk" target="_blank">http://www.cluster.dk</a></li>
 <li><a href="http://www.sugar-delta.org" target="_blank">http://www.sugar-delta.org</a></li>
-<!-- <a href="http://www.emudx.com" target="_blank">http://www.emudx.com</a> -->
+{% comment %}<!-- <a href="http://www.emudx.com" target="_blank">http://www.emudx.com</a> -->{% endcomment %}
 </ul>
 
+{% comment %}
 <!--
 <br>
 
@@ -31,6 +34,7 @@ DX Group Foxtrot Lima" /></a>
 <a href="http://logger32.free.fr/" target="_blank">Logger 32 for 11 meter</a>
 </p>
 -->
+{% endcomment %}
 
 <h2>Some Technical Links</h2>
 
@@ -48,6 +52,7 @@ Understanding 10 meter (also 11 meter) Sporadic E<br>
 <br>
 <br>
 
+{% comment %}
 <!--
 -Radio &amp; electronics school<br>
 <a href="http://www.radioelectronicschool.com" target="_blank">http://www.radioelectronicschool.com</a>
@@ -60,14 +65,17 @@ Understanding 10 meter (also 11 meter) Sporadic E<br>
 <br>
 <br>
 -->
+{% endcomment %}
 -11 meter antennas on WWW<br>
 <a href="http://fldx.org/site/11m-antennas-on-internet.php" target="_blank">http://fldx.org/site/11m-antennas-on-internet.php</a>
+{% comment %}
 <!--
 <br>
 <br>
 -"Twenty seven-eleven"<br>
 <a href="http://www.grommet.freeserve.co.uk/27-11/27-11.html" target="_blank">http://www.grommet.freeserve.co.uk/27-11/27-11.html</a>
 -->
+{% endcomment %}
 </p>
 
 <h2>Modifications, manuals, schematics etc.</h2>
@@ -76,25 +84,25 @@ Understanding 10 meter (also 11 meter) Sporadic E<br>
 <li><a href="http://members.tripod.com/~Malzev/" target="_blank">http://members.tripod.com/~Malzev/</a></li>
 <li><a href="http://service.alan-electronics.de/main.htm" target="_blank">http://service.alan-electronics.de/main.htm</a></li>
 <li><a href="http://www.cbtricks.com" target="_blank">http://www.cbtricks.com</a></li>
-<li><a href="http://www.cbradio.cz/doc/" target="_blank">http://www.cbradio.cz/doc/</a></li>
+{% comment %}<li><a href="http://www.cbradio.cz/doc/" target="_blank">http://www.cbradio.cz/doc/</a></li>{% endcomment %}
 <li><a href="http://www.cqham.ru/sch_eng.html" target="_blank">http://www.cqham.ru/sch_eng.html</a></li>
-<!--
+{% comment %}<!--
 <li><a href="http://www.geocities.com/linearschematics/" target="_blank">CB and Linear Schematics</a></li>
--->
-<li><a href="http://www.kb2ljj.com" target="_blank">http://www.kb2ljj.com</a></li>
+-->{% endcomment %}
+{% comment %}<li><a href="http://www.kb2ljj.com" target="_blank">http://www.kb2ljj.com</a></li>{% endcomment %}
 <li><a href="http://www.mods.dk" target="_blank">http://www.mods.dk</a></li>
 <li><a href="http://www.radiomods.co.nz/" target="_blank">http://www.radiomods.co.nz/</a></li>
 <li><a href="http://www.servicedocs.com/" target="_blank">http://www.servicedocs.com/</a></li>
 <li><a href="http://www.thiecom.de/ftp/" target="_blank">http://www.thiecom.de/ftp/</a></li>
 </ul>
 
-<!--
+{% comment %}<!--
 <p class="c">
 Antenna manufacturers<br>
 <br>
 <a href="http://www.hpsd.nl/ target="_blank">http://www.hpsd.nl/</a><br>
 </p>
--->
+-->{% endcomment %}
 <h2>Software</h2>
 
 <p>
