Fixed page title

--- a/links.html
+++ b/links.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-links: Links to Some Other Radio Related Sites
+title: Links to Some Other Radio Related Sites
 ---
 
 <h1>Links to Some Other Radio Related Sites</h1>
@@ -10,9 +10,7 @@ links: Links to Some Other Radio Related Sites
 <p class="c">
 <a href="http://www.qsl11.com" target="_blank"><img src="images/qsl_b2.gif" width="468" height="60" alt="QSL11.com - 11m E-QSL exchange" border="0" /></a><br>
 </p>
--->
-{% endcomment %}
-
+-->{% endcomment %}
 <p>
 <a href="http://fldx.org" target="_blank"><img src="http://fldx.org/site/images/fl_banner.jpg" style="border: 0px;" alt="Finnish International
 DX Group Foxtrot Lima" /></a>
@@ -33,9 +31,7 @@ DX Group Foxtrot Lima" /></a>
 11m logbook programs<br>
 <a href="http://logger32.free.fr/" target="_blank">Logger 32 for 11 meter</a>
 </p>
--->
-{% endcomment %}
-
+-->{% endcomment %}
 <h2>Some Technical Links</h2>
 
 <p>
