Add redirect from station.php

--- a/station.html
+++ b/station.html
@@ -1,12 +1,13 @@
 ---
 layout: default
 title: Info About my Station
+redirect_from:
+ - station.php
 ---
 
 <h1>My Station</h1>
 
 <h2>Working conditions</h2>
-
 
 <p>
 Transceiver: <b>Kenwood TS-480SAT + <a href="images/hrd.png">HRD</a></b><br>
@@ -22,8 +23,6 @@ Power output: 4/50/100 watts<br>
 <p>
 Antennas: 4 element short boom Yagi and a home made wire J-pole (vertical)
 </p>
-
-<br>
 
 <h2>Some other radio equipment that I have</h2>
 
