Fixed text in 404.html

--- a/404.html
+++ b/404.html
@@ -4,8 +4,7 @@ title: 404, not found
 permalink: /404.html
 ---
 
-<p><strong>Sorry</strong>, it looks like that page doesn’t exist, please head
-    back to <a href="/">the home page</a> or see the list of pages below.</p>
+<p><strong>Sorry</strong>, it looks like that page doesn’t exist.</p>
 
 <p>56FL001 Timo's Radio Website has been recently moved to Github for hosting. URLs for the site pages changed a bit. You can see a list of the pages
 on the site below.</p>
