--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: 404, not found
+title: 404, Not Found
 permalink: /404.html
 ---
 
 <p><strong>Sorry</strong>, it looks like that page doesn’t exist.</p>
 
-<p>56FL001 Timo's Radio Website has been recently moved to Github for hosting. URLs for the site pages changed a bit. You can see a list of the pages
+<p>56FL001 Timo's Radio Website has been recently moved to Github pages hosting. URLs for the site pages changed a bit. You can see a list of the pages
 on the site below.</p>
 
 <ul>
