Fixed text in 404.html

--- a/404.html
+++ b/404.html
@@ -4,6 +4,8 @@ title: 404, Not Found
 permalink: /404.html
 ---
 
+<h1>Oops&hellip; The Page Was Not Found</h1>
+
 <p><strong>Sorry</strong>, it looks like that page doesn’t exist.</p>
 
 <p>56FL001 Timo's Radio Website has been recently moved to Github pages hosting. URLs for the site pages changed a bit. You can see a list of the pages
