Address autofocus and required attributes to form fields

--- a/contact.html
+++ b/contact.html
@@ -54,20 +54,20 @@ function tarkistus() {
 <div id="contact-form">
 	<form role="form" action="http://fldx.org/56fl001/FormToEmail.php" method="post" onsubmit="return tarkistus();">
 		<p>
-			<label for="call_name">Callsign/Name</label><br> <input size="30" name="name" id="call_name" type="text" autocorrect="off" autocapitalize="words">
+			<label for="call_name">Callsign/Name</label><br> <input size="30" name="name" id="call_name" type="text" autocorrect="off" autocapitalize="words" required autofocus>
 		</p>
 
 		<p>
-			<label for="e-mail">E-mail</label><br> <input size="30" name="email" id="e-mail" type="text" autocapitalize="off" autocomplete="off" autocorrect="email">
+			<label for="e-mail">E-mail</label><br> <input size="30" name="email" id="e-mail" type="text" autocapitalize="off" autocomplete="off" autocorrect="email" required>
 		</p>
 
 		<p>
-			<label for="message">Comments</label><br><textarea name="comments" id="message" rows="10" cols="40"></textarea>
+			<label for="message">Comments</label><br><textarea name="comments" id="message" rows="10" cols="40" required></textarea>
 		</p>
 
 		<p>
 			<input value="Send" type="submit" class="button">
-			<!-- <font face="arial" size="1">&nbsp;&nbsp;<a href="http://FormToEmail.com">PHP Form</a> by FormToEmail.com</font> -->
+			{% comment %}<!-- <font face="arial" size="1">&nbsp;&nbsp;<a href="http://FormToEmail.com">PHP Form</a> by FormToEmail.com</font> -->{% endcomment %}
 		</p>
 	</form>
 </div>
