Updated caption text of the picture of St Mary's Church ruins

--- a/vaasa.html
+++ b/vaasa.html
@@ -115,7 +115,7 @@ as their mother tongue, 22% speak Swedish and 7% speak other languages.
  <div class="of-container">
    <a href="images/vaasa/old-vaasa-ruin-area.jpg"><img src="images/vaasa/old-vaasa-ruin-area-preview.jpg" alt="Picture from the ruin area at old Vaasa"></a>
    <div class="caption">
-     Picture from the ruin area at old Vaasa
+     Saint Mary's Church ruins at the old Vaasa ruin area
    </div>
  </div>
 </div>
