Added image of the statue of liberty to Vaasa page

--- a/vaasa.html
+++ b/vaasa.html
@@ -95,6 +95,15 @@ as their mother tongue, 22% speak Swedish and 7% speak other languages.
 
 <div class="overlap-figure">
  <div class="of-container">
+   <a href="images/vaasa/statue-of-liberty.jpg"><img src="images/vaasa/statue-of-liberty-preview.jpg" alt="View from the water tower"></a>
+   <div class="caption">
+     Finland's statue of liberty at Vaasa market square
+   </div>
+ </div>
+</div>
+
+<div class="overlap-figure">
+ <div class="of-container">
    <a href="images/vaasa/view-from-water-tower.jpg"><img src="images/vaasa/view-from-water-tower-preview.jpg" alt="View from the water tower"></a>
    <div class="caption">
      View from the water tower
