Changed Vaasa 400 logo to image of Vaasa flags

--- a/vaasa.html
+++ b/vaasa.html
@@ -77,17 +77,15 @@ as their mother tongue, 22% speak Swedish and 7% speak other languages.
 </div>
 
 <!--
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1848764.4370329988!2d21.61651279999999!3d63.095141199999986!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467d603e623ab243%3A0x1e1d7faa61aa800e!2s65100+Vaasa!5e0!3m2!1sfi!2sfi!4v1398346292271" width="800" height="650" frameborder="0" style="display: block; margin: 0 auto; border:0;"></iframe>
--->
-
 <p>
  In 2006 the city of Vaasa was celebrating its 400th year.<br>
  I was active with the 56FL/VSA400 SES, but the amount of QSOs in the log is quite small because
  I was only active from time to time and also the propagation was quite poor.
 </p>
+-->
 
-<div class="image" style="width: 300px; margin-left: auto; margin-right: auto;">
- <img src="images/vsa400.gif" alt="400 years of Vaasa in 2006">
+<div class="image" style="width: 500px; margin-left: auto; margin-right: auto;">
+ <img src="images/vaasa-flags.jpg" alt="City of Vaasa">
  <div class="caption"><a href="http://www.fmi.fi/weather/local.html?kunta=Vaasa" target="_blank">Current weather at Vaasa</a></div>
 </div>
 
