--- a/vaasa.html
+++ b/vaasa.html
@@ -84,7 +84,7 @@ as their mother tongue, 22% speak Swedish and 7% speak other languages.
 </p>
 -->
 
-<div class="image" style="width: 500px; margin-left: auto; margin-right: auto;">
+<div class="image" style="max-width: 500px; margin-left: auto; margin-right: auto;">
  <img src="images/vaasa/vaasa-flags.jpg" alt="City of Vaasa">
  <div class="caption"><a href="http://www.fmi.fi/weather/local.html?kunta=Vaasa" target="_blank">Current weather at Vaasa</a></div>
 </div>
