--- a/vaasa.html
+++ b/vaasa.html
@@ -84,9 +84,9 @@ as their mother tongue, 22% speak Swedish and 7% speak other languages.
 </p>
 -->
 
-<div class="image" style="max-width: 500px; margin-left: auto; margin-right: auto;">
+<div class="image center" style="max-width: 500px;">
  <img src="images/vaasa/vaasa-flags.jpg" alt="City of Vaasa">
- <div class="caption"><a href="http://www.fmi.fi/weather/local.html?kunta=Vaasa" target="_blank">Current weather at Vaasa</a></div>
+ <div class="caption center"><a href="http://www.fmi.fi/weather/local.html?kunta=Vaasa" target="_blank">Current weather at Vaasa</a></div>
 </div>
 
 <h2>Some pictures from Vaasa</h2>
