Added image of Mustasaari church to Vaasa page

--- a/vaasa.html
+++ b/vaasa.html
@@ -93,7 +93,7 @@ as their mother tongue, 22% speak Swedish and 7% speak other languages.
 
 <div class="overlap-figure">
  <div class="of-container">
-   <a href="images/vaasa/statue-of-liberty.jpg"><img src="images/vaasa/statue-of-liberty-preview.jpg" alt="View from the water tower"></a>
+   <a href="images/vaasa/statue-of-liberty.jpg"><img src="images/vaasa/statue-of-liberty-preview.jpg" alt="Statue of liberty"></a>
    <div class="caption">
      Finland's statue of liberty at Vaasa market square
    </div>
@@ -150,6 +150,15 @@ as their mother tongue, 22% speak Swedish and 7% speak other languages.
    <a href="images/vaasa/faros.jpg"><img src="images/vaasa/faros-preview.jpg" alt="Restaurant ship Faros"></a>
    <div class="caption">
      Restaurant ship <a href="http://www.faros.fi/en/">Faros</a> (ARLHS <a href="http://wlol.arlhs.com/lighthouse/FIN103.html">FIN-103</a>, <a href="http://www.lightphotos.net/photos/displayimage.php?album=15&amp;pid=7444">Lightship Kalbådagrund</a>) in the middle. The road on the left leads to the city centre.
+   </div>
+ </div>
+</div>
+
+<div class="overlap-figure">
+ <div class="of-container">
+   <a href="images/vaasa/mustasaari-church.jpg"><img src="images/vaasa/mustasaari-church-preview.jpg" alt="Mustasaari church"></a>
+   <div class="caption">
+     Mustasaari church
    </div>
  </div>
 </div>
