--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@ Aurora Borealis
 
 
 <div id="video-container" style="max-width: 640px; margin: 0 0 25px; text-align: left;"> <!-- normal centering style="width: 640px;"  -->
- <iframe width="640" height="360" src="http://www.youtube.com/embed/Lc3FxNXjBs0" allowfullscreen></iframe><!-- frameborder=0 -->
 </div>
+
+<script>
+window.onload = function() {
+document.getElementById("video-container").innerHTML = '<iframe width="640" height="360" src="http://www.youtube.com/embed/Lc3FxNXjBs0" allowfullscreen></iframe><!-- frameborder=0 -->';
+}
+</script>
 
 <!--
 <div style="width: 640px; margin: 0 auto; text-align: left;">
