Switch to using a local version of the FL and QRZ11 banners to reduce DNS lookups

--- a/links.html
+++ b/links.html
@@ -12,7 +12,7 @@ title: Links to Some Other Radio Related Sites
 </p>
 -->{% endcomment %}
 <p>
-<a href="http://fldx.org" target="_blank"><img src="http://fldx.org/site/images/fl_banner.jpg" style="border: 0px;" alt="Finnish International
+<a href="http://fldx.org" target="_blank"><img src="/images/banners/fl_banner.jpg" style="border: 0px;" alt="Finnish International
 DX Group Foxtrot Lima" /></a>
 </p>
 
