--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ I participated in the <a href="http://www.alfatango.org/cms/index.php/at-contest
 </div>
 
 <div style="margin: 25px 0;">
-<p class="c"><a href="http://fldx.org" target="_blank"><img src="http://fldx.org/site/images/fl_banner.jpg" alt="Finnish International
+<p class="c"><a href="http://fldx.org" target="_blank"><img src="images/banners/fl_banner.jpg" alt="Finnish International
 DX Group Foxtrot Lima" style="border: 0px;" /></a>
 </p>
 </div>
@@ -83,7 +83,7 @@ To see the latest spots from most of the 11m clusters <a href="http://fldx.org/s
 <div>
 <form method="get" action="http://www.qrz11.com/show_prof.php" target="_blank">
 <table style="border: 0px; background-color: #ececec;">
-<tr><td><a href="http://www.qrz11.com" target="_blank"><img alt="QRZ11.com" src="http://www.qrz11.com/pressroom/banners/half-banner-qrz11.gif" /></a></td></tr>
+<tr><td><a href="http://www.qrz11.com" target="_blank"><img alt="QRZ11.com" src="images/banners/half-banner-qrz11.gif" /></a></td></tr>
 <tr><td>Callsign:&nbsp;&nbsp; <input type="text" name="callsign" size="8" /> <input type="submit" value="search" /></td></tr>
 </table>
 </form>
