Use a minified version of jquery.fitvids

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ node.src = 'example.js';
 
 <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
-<script async src="js/fitvids/jquery.fitvids.js"></script>
+<script async src="js/fitvids/jquery.fitvids.min.js"></script>
 <script async>
   $(document).ready(function(){
     // Target your .container, .wrapper, .post, etc.
