--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@ node.src = 'example.js';
 Aurora Borealis
 </p>
 
-<!-- ionosonde sound
-<iframe title="YouTube video player" width="480" height="390" src="http://www.youtube.com/embed/uFMcHKft84k" frameborder="0" allowfullscreen></iframe>
--->
-
-
-
-<div id="video-container" style="max-width: 640px; margin: 0 0 25px; text-align: left;"> <!-- normal centering style="width: 640px;"  -->
+<div id="video-container" style="max-width: 640px; margin: 0 0 25px; text-align: left;">
 </div>
 
 <script>
@@ -42,17 +36,6 @@ window.onload = function() {
 document.getElementById("video-container").innerHTML = '<iframe width="640" height="360" src="http://www.youtube.com/embed/Lc3FxNXjBs0" allowfullscreen></iframe><!-- frameborder=0 -->';
 }
 </script>
-
-<!--
-<div style="width: 640px; margin: 0 auto; text-align: left;">
-<object type="application/x-shockwave-flash" data="http://www.youtube.com/v/Lc3FxNXjBs0&amp;hl=fi_FI&amp;fs=1" width="640" height="385">
-<param name="movie" value="http://www.youtube.com/v/Lc3FxNXjBs0&amp;hl=fi_FI&amp;fs=1" />
-<param name="allowFullScreen" value="true" />
-<param name="allowscriptaccess" value="always" />
-<a href="http://www.youtube.com/v/Lc3FxNXjBs0&amp;hl=fi_FI&amp;fs=1" target="_blank">http://www.youtube.com/v/Lc3FxNXjBs0&amp;hl=fi_FI&amp;fs=1</a>
-</object>
-</div>
--->
 
 <div>
 <p>
