Added section.banners for FL banner and QRZ11.com search

--- a/index.html
+++ b/index.html
@@ -51,19 +51,14 @@ I participated in the <a href="http://www.alfatango.org/cms/index.php/at-contest
 </p>
 </div>
 
-<div style="margin: 25px 0;">
+<section class="banners">
+<div class="fl-banner" style="margin: 25px 0;">
 <p class="c"><a href="http://fldx.org" target="_blank"><img src="images/banners/fl_banner.jpg" alt="Finnish International
 DX Group Foxtrot Lima" style="border: 0px;" /></a>
 </p>
 </div>
 
-
-<!-- Foxtrot Lima clusterspots.php -->
-<p>
-To see the latest spots from most of the 11m clusters <a href="http://fldx.org/site/clusterspots.php" target="_blank">click here</a>.<br />
-</p>
-
-<div>
+<div class="qrz11search">
 <form method="get" action="http://www.qrz11.com/show_prof.php" target="_blank">
 <table style="border: 0px; background-color: #ececec;">
 <tr><td><a href="http://www.qrz11.com" target="_blank"><img alt="QRZ11.com" src="images/banners/half-banner-qrz11.gif" /></a></td></tr>
@@ -71,3 +66,9 @@ To see the latest spots from most of the 11m clusters <a href="http://fldx.org/s
 </table>
 </form>
 </div>
+</section>
+
+<!-- Foxtrot Lima clusterspots.php -->
+<p>
+To see the latest spots from most of the 11m clusters <a href="http://fldx.org/site/clusterspots.php" target="_blank">click here</a>.<br />
+</p>
