Moved inline style from .fl-banner to main.scss

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ I participated in the <a href="http://www.alfatango.org/cms/index.php/at-contest
 </div>
 
 <section class="banners">
-<div class="fl-banner" style="margin: 25px 0;">
+<div class="fl-banner">
 <p class="c"><a href="http://fldx.org" target="_blank"><img src="images/banners/fl_banner.jpg" alt="Finnish International
 DX Group Foxtrot Lima" style="border: 0px;" /></a>
 </p>
