Class and styling for news items on index page

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@ document.getElementById("video-container").innerHTML = '<iframe width="640" heig
 }
 </script>
 
-<div>
+<div class="news-item">
 <p>
 Aurora QSO with 20SD110 Kare in Norway on 11.11.2010<br />
 <a href="http://www.ustream.tv/recorded/10783507" target="_blank">http://www.ustream.tv/recorded/10783507</a>
 </p>
 </div>
 
-<div>
+<div class="news-item">
 <p>
 I participated in the <a href="http://www.alfatango.org/cms/index.php/at-contest/263-woman-s-day-contest" target="_blank">AT Woman's Day Contest 2014</a>, video by 14FAT133 on 8.3.2014<br>
 <a href="http://www.youtube.com/watch?v=xcrPMlTOLTo" target="_blank">http://www.youtube.com/watch?v=xcrPMlTOLTo</a>
