--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ Aurora Borealis
 </div>
 
 <script>
-window.onload = function() {
-document.getElementById("video-container").innerHTML = '<iframe width="640" height="360" src="http://www.youtube.com/embed/Lc3FxNXjBs0" allowfullscreen></iframe><!-- frameborder=0 -->';
-}
+window.addEventListener("load",function(){
+  document.getElementById("video-container").innerHTML = '<iframe width="640" height="360" src="http://www.youtube.com/embed/Lc3FxNXjBs0" allowfullscreen></iframe><!-- frameborder=0 -->';
+},false);
 </script>
 
 <div class="news-item">
