--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ node.src = 'example.js';
 </script>
 -->
 
+<!--
 <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
 <script async src="js/fitvids/jquery.fitvids.min.js"></script>
@@ -21,6 +22,7 @@ node.src = 'example.js';
     $("#video-container").fitVids();
   });
 </script>
+-->
 
 <h1>Welcome to <span>56FL001's Radio Website</span></h1>
 
@@ -28,7 +30,7 @@ node.src = 'example.js';
 Aurora Borealis
 </p>
 
-<div id="video-container" style="max-width: 640px; margin: 0 0 25px; text-align: left;">
+<div id="video-container" class="embed-container" style="max-width: 640px; margin: 0 0 25px; text-align: left;">
 </div>
 
 <script>
