Remove pixel max-width from Youtube video container

--- a/index.html
+++ b/index.html
@@ -2,35 +2,13 @@
 layout: default
 ---
 
-<!--
-<script>
-var node = document.createElement('script');
-node.type = 'text/javascript';
-node.async = true;
-node.src = 'example.js';
-// Now insert the node into the DOM, perhaps using insertBefore()
-</script>
--->
-
-<!--
-<script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-
-<script async src="js/fitvids/jquery.fitvids.min.js"></script>
-<script async>
-  $(document).ready(function(){
-    // Target your .container, .wrapper, .post, etc.
-    $("#video-container").fitVids();
-  });
-</script>
--->
-
 <h1>Welcome to <span>56FL001's Radio Website</span></h1>
 
-<p>
+<h2>
 Aurora Borealis
-</p>
+</h2>
 
-<div id="video-container" class="embed-container" style="max-width: 640px; margin: 0 0 25px; text-align: left;">
+<div id="video-container" class="embed-container" style="margin: 0 0 25px;">
 </div>
 
 <script>
