--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ DX Group Foxtrot Lima" style="border: 0px;"></a></p>
 <form method="get" action="http://www.qrz11.com/show_prof.php" target="_blank">
 <table style="border: 0px; background-color: #ececec;">
 <tr><td><a href="http://www.qrz11.com" target="_blank"><img alt="QRZ11.com" src="images/banners/half-banner-qrz11.gif"></a></td></tr>
-<tr><td><laber for="call">Callsign:</label>&nbsp;&nbsp; <input type="text" name="callsign" id="call" size="8"> <input type="submit" value="search"></td></tr>
+<tr><td><label for="call">Callsign:</label>&nbsp;&nbsp; <input type="text" name="callsign" id="call" size="8"> <input type="submit" value="search"></td></tr>
 </table>
 </form>
 </div>
