Improve link text on the cluster spots link

--- a/index.html
+++ b/index.html
@@ -49,5 +49,5 @@ DX Group Foxtrot Lima" style="border: 0px;"></a></p>
 
 <!-- Foxtrot Lima clusterspots.php -->
 <p>
-To see the latest spots from most of the 11m clusters <a href="http://fldx.org/site/clusterspots.php" target="_blank">click here</a>.<br />
+<a href="http://fldx.org/site/clusterspots.php" target="_blank">Latest spots from most of the 11m clusters</a>
 </p>
