Removed class .newqsl from 161AT/ID2010 link

--- a/qsls.html
+++ b/qsls.html
@@ -72,7 +72,7 @@ title: Some of my Received QSL Cards
 <a href="images/qsls/2010/old/90_20at023.jpg">90/20AT023</a><br>
 <a href="images/qsls/2010/old/91da002.jpg">91DA002</a><br>
 <a href="images/qsls/2010/old/153tdt_dx.jpg">153TDT/DX</a><br>
-<a class="newqsl" href="images/qsls/2010/old/161at_id2010.jpg">161AT/ID2010</a><br>
+<a href="images/qsls/2010/old/161at_id2010.jpg">161AT/ID2010</a><br>
 <a href="images/qsls/2010/old/161od166.jpg">161OD166</a><br>
 <a href="images/qsls/2010/old/161od171.jpg">161OD171</a><br>
 <a href="images/qsls/2010/old/161od_rip.jpg">161OD/RIP</a><br>
