Test .item-list class

--- a/qsls.html
+++ b/qsls.html
@@ -7,10 +7,10 @@ title: Some of my Received QSL Cards
 
 <h2>Year 2014</h2>
 
-<p>
-<a href="images/qsls/2014/69SD010.jpg">69SD010</a><br>
-<a href="images/qsls/2014/80SD103.jpg">80SD103</a>
-</p>
+<ul class="item-list">
+<li><a href="images/qsls/2014/69SD010.jpg">69SD010</a>
+<li><a href="images/qsls/2014/80SD103.jpg">80SD103</a>
+</ul>
 
 <h2>Year 2013</h2>
 
