--- a/vaasa.html
+++ b/vaasa.html
@@ -149,7 +149,8 @@ as their mother tongue, 22% speak Swedish and 7% speak other languages.
  <div class="of-container">
    <a href="images/vaasa/faros.jpg"><img src="images/vaasa/faros-preview.jpg" alt="Restaurant ship Faros"></a>
    <div class="caption">
-     Restaurant ship <a href="http://www.faros.fi/en/">Faros</a> (ARLHS <a href="http://wlol.arlhs.com/lighthouse/FIN103.html">FIN-103</a>, <a href="http://www.lightphotos.net/photos/displayimage.php?album=15&amp;pid=7444">Lightship Kalbådagrund</a>) in the middle. The road on the left leads to the city centre.
+     The road on the left leads to the city centre.
+     Restaurant ship <a href="http://www.faros.fi/en/">Faros</a> (ARLHS <a href="http://wlol.arlhs.com/lighthouse/FIN103.html">FIN-103</a>, <a href="http://www.lightphotos.net/photos/displayimage.php?album=15&amp;pid=7444">Lightship Kalbådagrund</a>) is on the right.
    </div>
  </div>
 </div>
