Improved text on a heading

--- a/files.html
+++ b/files.html
@@ -30,7 +30,7 @@ A99 manual from cbharraste.info (by 56FL114, Pete)<br>
 </p>
 
 <div>
-<h2>Some files from Foxtrot Lima website</h2>
+<h2>Some files from the Foxtrot Lima website</h2>
 
 <p>General Printable Log Sheet: <a href="http://fldx.org/site/downloads/fl/fl_log_sheet.pdf">English</a>, <a href="http://fldx.org/site/downloads/fl/fl_lokisivu.pdf">Finnish</a> or <a href="http://fldx.org/site/downloads/fl/fl_logg_sida.pdf">Swedish</a></p>
 <p>Log Sheet Model 2: <a href="http://fldx.org/site/downloads/fl/fl_log_sheet_2.pdf">English</a>, <a href="http://fldx.org/site/downloads/fl/fl_lokisivu_2.pdf">Finnish</a> or <a href="http://fldx.org/site/downloads/fl/fl_logg_sida_2.pdf">Swedish</a></p>
