Use a UL element for the listing of radio equipment

--- a/station.html
+++ b/station.html
@@ -24,17 +24,17 @@ Antennas: 4 element short boom Yagi and a home made wire J-pole (vertical)
 
 <h2>Some other radio equipment that I have</h2>
 
-<p>
-<b>President George</b><br>
-<b>President Jackson</b><br>
-<b>Ranger RCI-2950</b><br>
-<b>Mocoma 7140</b> (40 Channel FM CB Radio) + lot's of other CB radios<br>
-ALAN42 handheld (40CH, AM/FM), Albrecht AE-201S handheld<br>
-<b>MFJ-941E</b> antenna tuner<br>
-<b>MFJ-1270C</b> TNC<br>
-<b>AEA PK-96</b> TNC<br>
-<b>T20</b> wire antenna (Wire antenna for 11 meter made in Finland, for info see <a href="http://koti.mbnet.fi/t20aaa/T20TRIP.HTM" target="_blank">T20 Trip antenna</a>)<br>
-</p>
+<ul class="item-list">
+<li><b>President George</b></li>
+<li><b>President Jackson</b></li>
+<li><b>Ranger RCI-2950</b></li>
+<li><b>Mocoma 7140</b> (40 Channel FM CB Radio) + lot's of other CB radios</li>
+ALAN42 handheld (40CH, AM/FM), Albrecht AE-201S handheld</li>
+<li><b>MFJ-941E</b> antenna tuner</li>
+<li><b>MFJ-1270C</b> TNC</li>
+<li><b>AEA PK-96</b> TNC</li>
+<li><b>T20</b> wire antenna (Wire antenna for 11 meter made in Finland, for info see <a href="http://koti.mbnet.fi/t20aaa/T20TRIP.HTM" target="_blank">T20 Trip antenna</a>)</li>
+</ul>
 
 <div class="overlap-figure">
   <div class="of-container">
