Add class item-list to list of callsigns

--- a/station.html
+++ b/station.html
@@ -56,7 +56,7 @@ ALAN42 handheld (40CH, AM/FM), Albrecht AE-201S handheld</li>
 
 <h2>Some of my callsigns in other DX groups</h2>
 
-<ul>
+<ul class="item-list">
 <li>56AD112</li>
 <li>56AT112 (ex.)</li>
 <li>56EL112</li>
