Changes to .qrz11search code

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ DX Group Foxtrot Lima" style="border: 0px;"></a></p>
 <form method="get" action="http://www.qrz11.com/show_prof.php" target="_blank">
 <table>
 <tr><td><a href="http://www.qrz11.com" target="_blank"><img alt="QRZ11.com" src="images/banners/half-banner-qrz11.gif"></a></td></tr>
-<tr><td><label for="call">Callsign:</label>&nbsp; <input type="text" name="callsign" id="call" size="8"> <input type="submit" value="Search"></td></tr>
+<tr><td><label for="call">Callsign:</label> <input type="text" name="callsign" id="call" size="8"> <input type="submit" value="Search"></td></tr>
 </table>
 </form>
 </div>
