Links on the 404 page now point to the canonical URLs

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: 404, Not Found
-permalink: /404.html
+permalink: /404
 ---
 
 <h1>Oops&hellip; The Page Was Not Found</h1>
@@ -12,13 +12,13 @@ permalink: /404.html
 on the site below.</p>
 
 <ul>
-  <li><a href="http://56fl001.fldx.org/">http://56fl001.fldx.org/</a></li>
-  <li><a href="http://56fl001.fldx.org/station.html">http://56fl001.fldx.org/station.html</a></li>
-  <li><a href="http://56fl001.fldx.org/kristiina-2010.html">http://56fl001.fldx.org/kristiina-2010.html</a></li>
-  <li><a href="http://56fl001.fldx.org/vaasa.html">http://56fl001.fldx.org/vaasa.html</a></li>
-  <li><a href="http://56fl001.fldx.org/qsls.html">http://56fl001.fldx.org/qsls.html</a></li>
-  <li><a href="http://56fl001.fldx.org/radioqth-qsl-creator.html">http://56fl001.fldx.org/radioqth-qsl-creator.html</a></li>
-  <li><a href="http://56fl001.fldx.org/files.html">http://56fl001.fldx.org/files.html</a></li>
-  <li><a href="http://56fl001.fldx.org/links.html">http://56fl001.fldx.org/links.html</a></li>
-  <li><a href="http://56fl001.fldx.org/contact.html">http://56fl001.fldx.org/contact.html</a></li>
+  <li><a href="http://56fl001.fldx.org">http://56fl001.fldx.org</a></li>
+  <li><a href="http://56fl001.fldx.org/station">http://56fl001.fldx.org/station</a></li>
+  <li><a href="http://56fl001.fldx.org/kristiina-2010">http://56fl001.fldx.org/kristiina-2010</a></li>
+  <li><a href="http://56fl001.fldx.org/vaasa">http://56fl001.fldx.org/vaasa</a></li>
+  <li><a href="http://56fl001.fldx.org/qsls">http://56fl001.fldx.org/qsls</a></li>
+  <li><a href="http://56fl001.fldx.org/radioqth-qsl-creator">http://56fl001.fldx.org/radioqth-qsl-creator</a></li>
+  <li><a href="http://56fl001.fldx.org/files">http://56fl001.fldx.org/files</a></li>
+  <li><a href="http://56fl001.fldx.org/links">http://56fl001.fldx.org/links</a></li>
+  <li><a href="http://56fl001.fldx.org/contact">http://56fl001.fldx.org/contact</a></li>
 </ul>
