--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Aurora Borealis
 
 <script>
 window.addEventListener("load",function(){
-  document.getElementById("video-container").innerHTML = '<iframe width="640" height="360" src="http://www.youtube.com/embed/Lc3FxNXjBs0" allowfullscreen></iframe><!-- frameborder=0 -->';
+  document.getElementById("video-container").innerHTML = '<iframe width="640" height="360" src="http://www.youtube.com/embed/Lc3FxNXjBs0" allowfullscreen title="Video: The Amazing Northern Lights (Aurora Borealis) - FINLAND"></iframe>';
 },false);
 </script>
 
@@ -40,7 +40,7 @@ DX Group Foxtrot Lima" style="border: 0px;"></a></p>
 <div class="qrz11search">
 <form method="get" action="http://www.qrz11.com/show_prof.php" target="_blank">
 <table role="presentation">
-<tr><td><a href="http://www.qrz11.com" target="_blank"><img alt="QRZ11.com" src="images/banners/half-banner-qrz11.gif"></a></td></tr>
+<tr><th><a href="http://www.qrz11.com" target="_blank"><img alt="QRZ11.com" src="images/banners/half-banner-qrz11.gif"></a></th></tr>
 <tr><td><label for="call">Callsign:</label> <input type="text" name="callsign" id="call" size="8"> <input type="submit" value="Search"></td></tr>
 </table>
 </form>
