Use protocol relative URL for video on home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Aurora Borealis
 
 <script>
 window.addEventListener("load",function(){
-  document.getElementById("video-container").innerHTML = '<iframe width="640" height="360" src="http://www.youtube.com/embed/Lc3FxNXjBs0" allowfullscreen title="Video: The Amazing Northern Lights (Aurora Borealis) - FINLAND"></iframe>';
+  document.getElementById("video-container").innerHTML = '<iframe width="640" height="360" src="//www.youtube.com/embed/Lc3FxNXjBs0" allowfullscreen title="Video: The Amazing Northern Lights (Aurora Borealis) - FINLAND"></iframe>';
 },false);
 </script>
 
