Changed yaLOG link URL to point to the new website
Changed yaLOG link URL to point to the new yaLOG website and added width and height attribute to the banner image.

--- a/links.html
+++ b/links.html
@@ -107,5 +107,5 @@ Electronics Assistant is a Windows program that performs electronics-related cal
 </p>
 
 <p>
-<a href="http://yalog.altervista.org"><img src="images/yalogbanner468x60.gif" alt="yaLOG!"></a>
+<a href="https://yalog.net/"><img src="images/yalogbanner468x60.gif" width="468" height="60" alt="yaLOG!"></a>
 </p>
