Removed redundant links
Info about Vaasa region is now under one roof at www.vaasa.fi

--- a/vaasa.html
+++ b/vaasa.html
@@ -172,8 +172,8 @@ as their mother tongue, 22% speak Swedish and 7% speak other languages.
 
 <p>
  For more info about Vaasa you can visit:<br>
- <a href="http://www.vaasa.fi/en">http://www.vaasa.fi/en</a>, <a href="http://www.visitvaasa.fi/en/">http://www.visitvaasa.fi/en/</a> and<br>
- <a href="http://www1.vaasa.fi/yleisesiteweb/engpage/engdefault.htm">http://www1.vaasa.fi/yleisesiteweb/engpage/engdefault.htm</a>
+ <a href="http://www.vaasa.fi/en">http://www.vaasa.fi/en</a>
+</p>
 
  <p>
    And for more info about Ostrobothnia:<br>
