--- a/contact.html
+++ b/contact.html
@@ -39,11 +39,12 @@ function tarkistus() {
 <div id="address">
 	56FL001 QSL &amp; Mailing Address<br>
 	<img src="images/qsl_writing_smaller.jpg" alt="Some QSLs under work">
-	<span>
-		Timo<br>
-		P.O.Box 7<br>
-		65301 Vaasa<br>
-		Finland<br>
+	<span itemscope itemtype="http://schema.org/PostalAddress">
+	<span itemprop="name">Timo</span><br>
+	P.O.Box <span itemprop="postOfficeBoxNumber">7</span><br>
+	<span itemprop="postalCode">65301</span><br>
+	<span itemprop="addressLocality">Vaasa</span><br>
+	<span itemprop="addressCountry">Finland</span>
 	</span>
 </div>
 
