Code and style fix for QSL address

--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,13 @@ function tarkistus() {
 <div id="address">
 	56FL001 QSL &amp; Mailing Address<br>
 	<img src="images/qsl_writing_smaller.jpg" alt="Some QSLs under work">
-	<span itemscope itemtype="http://schema.org/PostalAddress">
+	<div itemscope itemtype="http://schema.org/PostalAddress">
 	<span itemprop="name">Timo</span><br>
 	P.O.Box <span itemprop="postOfficeBoxNumber">7</span><br>
 	<span itemprop="postalCode">65301</span><br>
 	<span itemprop="addressLocality">Vaasa</span><br>
 	<span itemprop="addressCountry">Finland</span>
-	</span>
+	</div>
 </div>
 
 <p>
