Updated G4WPW link to microphone wiring
Link points to a archived version at web.archive.org now,
as the site seems to be gone.

--- a/links.html
+++ b/links.html
@@ -40,7 +40,7 @@ DX Group Foxtrot Lima" /></a>
 <br>
 <br>
 -Microphone wiring info for ham radios on G4WPW's site<br>
-<a href="http://homepage.ntlworld.com/rg4wpw/date.html" target="_blank">http://homepage.ntlworld.com/rg4wpw/date.html</a>
+<a href="https://web.archive.org/web/20160603012336/http://homepage.ntlworld.com/rg4wpw/date.html" target="_blank">http://homepage.ntlworld.com/rg4wpw/date.html</a>
 <br>
 <br>
 Understanding 10 meter (also 11 meter) Sporadic E<br>
